// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carousel /> UI snapshots renders with bottom right aligned arrows 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

.emotion-24 {
  overflow: hidden !important;
  padding-bottom: 1.5rem;
}

.emotion-24 .slick-slider {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  -khtml-user-select: none;
  -ms-touch-action: pan-y;
  touch-action: pan-y;
  -webkit-tap-highlight-color: transparent;
}

.emotion-24 .slick-list {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
}

.emotion-24 .slick-list:focus {
  outline: none;
}

.emotion-24 .slick-list.dragging {
  cursor: pointer;
  cursor: hand;
}

.emotion-24 .slick-slider .slick-track,
.emotion-24 .slick-slider .slick-list {
  -webkit-transform: translate3d(0,0,0);
  -moz-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  -o-transform: translate3d(0,0,0);
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-24 .slick-track {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-24 .slick-loading .slick-track {
  visibility: hidden;
}

.emotion-24 .slick-slide {
  display: none;
  float: left;
  height: 100%;
  min-height: 1px;
}

.emotion-24 .slick-slide.slick-loading img {
  display: none;
}

.emotion-24 .slick-slide.dragging img {
  pointer-events: none;
}

.emotion-24 .slick-initialized .slick-slide {
  display: block;
}

.emotion-24 .slick-loading .slick-slide {
  visibility: hidden;
}

.emotion-24 .slick-vertical .slick-slide {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  border: 1px solid transparent;
}

.emotion-24 .slick-arrow.slick-hidden {
  display: none;
}

.emotion-24 .slick-slider {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-24 .slick-dots {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  position: absolute;
  left: 50%;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
  bottom: -32px;
}

.emotion-24 .slick-dots li {
  border-radius: 50%;
  height: 0.25rem;
  width: 0.25rem;
  margin-right: 0.25rem;
  opacity: 0.25;
}

.emotion-24 .slick-dots li:first-of-type {
  margin-left: 0.25rem;
}

.emotion-24 .slick-dots li button {
  display: none;
}

.emotion-24 .slick-dots li.slick-active {
  opacity: 1;
}

.emotion-24 .slick-dots li {
  background-color: #332E54;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: block;
  margin: 0;
  min-height: 52px;
  opacity: 1;
  padding: 0 1.5rem;
  position: relative;
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EDEDF0;
  border-color: #EDEDF0;
  color: #C3C0CD;
  cursor: not-allowed;
  fill: #C3C0CD;
  min-width: 208px;
  max-width: 325px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 50%;
  max-width: unset;
  min-height: unset;
  min-width: unset;
  height: 48px;
  width: 48px;
  padding: 0;
}

.emotion-3:hover {
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
}

.emotion-3:active,
.emotion-3:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-3:visited,
.emotion-3:hover {
  opacity: 1;
  color: #C3C0CD;
}

.emotion-3 > svg {
  opacity: 1;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
  margin: 0 auto;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  margin-top: -6px;
  width: 38px;
  opacity: 0;
  width: 36px;
  margin: -3px -3px 0 0;
}

.emotion-1 span {
  border-radius: 50%;
  display: inline-block;
  height: 4px;
  width: 4px;
  position: absolute;
}

.emotion-1 span:nth-of-type(1) {
  -webkit-animation: animation-0 1750ms infinite linear;
  animation: animation-0 1750ms infinite linear;
}

.emotion-1 span:nth-of-type(2) {
  -webkit-animation: animation-0 1750ms infinite linear -300ms;
  animation: animation-0 1750ms infinite linear -300ms;
}

.emotion-1 span:nth-of-type(3) {
  -webkit-animation: animation-0 1750ms infinite linear -600ms;
  animation: animation-0 1750ms infinite linear -600ms;
}

.emotion-1 span {
  background-color: #FFFFFF;
}

.emotion-9 {
  width: 311px !important;
  min-height: 48px;
  margin: 0 0.5rem;
}

.emotion-26 {
  max-width: 702px;
}

.emotion-7 {
  display: block;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin: 0.5rem;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  margin-left: auto;
}

.emotion-7 button {
  background-color: none;
  border-color: #332E54;
  color: #332E54;
}

.emotion-7 button:hover {
  color: #332E54;
}

.emotion-22 {
  display: block;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin: 0.5rem;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.emotion-18 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: block;
  margin: 0;
  min-height: 52px;
  opacity: 1;
  padding: 0 1.5rem;
  position: relative;
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #332E54;
  border-color: #332E54;
  color: #FFFFFF;
  fill: #FFFFFF;
  min-width: 208px;
  max-width: 325px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 50%;
  max-width: unset;
  min-height: unset;
  min-width: unset;
  height: 48px;
  width: 48px;
  padding: 0;
}

.emotion-18:hover {
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
}

.emotion-18:active,
.emotion-18:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-18:visited,
.emotion-18:hover {
  opacity: 0.8;
}

.emotion-18:focus,
.emotion-18:not([href]):not([tabindex]):hover,
.emotion-18:not([href]):not([tabindex]):focus {
  color: #FFFFFF;
}

.emotion-18:hover {
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  opacity: 1;
}

.emotion-18 > svg {
  opacity: 1;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
  margin: 0 auto;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  margin-top: -6px;
  width: 38px;
  opacity: 0;
  width: 36px;
  margin: -3px -3px 0 0;
}

.emotion-16 span {
  background-color: #FFFFFF;
  border-radius: 50%;
  display: inline-block;
  height: 4px;
  width: 4px;
  position: absolute;
}

.emotion-16 span:nth-of-type(1) {
  -webkit-animation: animation-0 1750ms infinite linear;
  animation: animation-0 1750ms infinite linear;
}

.emotion-16 span:nth-of-type(2) {
  -webkit-animation: animation-0 1750ms infinite linear -300ms;
  animation: animation-0 1750ms infinite linear -300ms;
}

.emotion-16 span:nth-of-type(3) {
  -webkit-animation: animation-0 1750ms infinite linear -600ms;
  animation: animation-0 1750ms infinite linear -600ms;
}

<div
  class="emotion-26 emotion-27"
>
  <div
    class="emotion-24 emotion-25"
  >
    <div
      class="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        class="emotion-7 emotion-8"
        disabled=""
      >
        <div
          class="emotion-5 emotion-6"
        >
          <button
            class="emotion-3 emotion-4"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-0"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 7.21H2.41L8.74.89 7.85 0 0 7.86l8.18 7.87.87-.9-6.63-6.37H16V7.21z"
                fill="currentColor"
              />
            </svg>
            <div
              class="emotion-1 emotion-2"
              disabled=""
            >
              <div>
                <span />
                <span />
                <span />
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline: none;"
            tabindex="-1"
          >
            <div>
              <div
                class="emotion-9 emotion-10"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                Card 1
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active"
            data-index="1"
            style="outline: none;"
            tabindex="-1"
          >
            <div>
              <div
                class="emotion-9 emotion-10"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                Card 2
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="2"
            style="outline: none;"
            tabindex="-1"
          >
            <div>
              <div
                class="emotion-9 emotion-10"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                Card 3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-22 emotion-8"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <button
            class="emotion-18 emotion-4"
            type="button"
          >
            <svg
              class="emotion-0"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.01 7.41H13.6L7.27 1.09 8.15.2l7.86 7.86-8.19 7.87-.86-.9 6.62-6.37H.01V7.41z"
                fill="currentColor"
              />
            </svg>
            <div
              class="emotion-16 emotion-2"
            >
              <div>
                <span />
                <span />
                <span />
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Carousel /> UI snapshots renders with props 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

@keyframes animation-0 {
  0% {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0) scale(1,1);
    -ms-transform: translate3d(0,0,0) scale(1,1);
    transform: translate3d(0,0,0) scale(1,1);
  }

  20% {
    opacity: .95;
    -webkit-transform: translate3d(12px,0,0) scale(1,1);
    -ms-transform: translate3d(12px,0,0) scale(1,1);
    transform: translate3d(12px,0,0) scale(1,1);
  }

  35% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0) scale(.85,.85);
    -ms-transform: translate3d(16px,0,0) scale(.85,.85);
    transform: translate3d(16px,0,0) scale(.85,.85);
  }

  100% {
    opacity: 0;
    -webkit-transform: translate3d(16px,0,0);
    -ms-transform: translate3d(16px,0,0);
    transform: translate3d(16px,0,0);
  }
}

.emotion-26 {
  max-width: 375px;
}

.emotion-24 {
  overflow: hidden !important;
  padding-bottom: 1.5rem;
}

.emotion-24 .slick-slider {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1.5rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  -khtml-user-select: none;
  -ms-touch-action: pan-y;
  touch-action: pan-y;
  -webkit-tap-highlight-color: transparent;
}

.emotion-24 .slick-list {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  overflow: hidden;
}

.emotion-24 .slick-list:focus {
  outline: none;
}

.emotion-24 .slick-list.dragging {
  cursor: pointer;
  cursor: hand;
}

.emotion-24 .slick-slider .slick-track,
.emotion-24 .slick-slider .slick-list {
  -webkit-transform: translate3d(0,0,0);
  -moz-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  -o-transform: translate3d(0,0,0);
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.emotion-24 .slick-track {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-24 .slick-loading .slick-track {
  visibility: hidden;
}

.emotion-24 .slick-slide {
  display: none;
  float: left;
  height: 100%;
  min-height: 1px;
}

.emotion-24 .slick-slide.slick-loading img {
  display: none;
}

.emotion-24 .slick-slide.dragging img {
  pointer-events: none;
}

.emotion-24 .slick-initialized .slick-slide {
  display: block;
}

.emotion-24 .slick-loading .slick-slide {
  visibility: hidden;
}

.emotion-24 .slick-vertical .slick-slide {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  border: 1px solid transparent;
}

.emotion-24 .slick-arrow.slick-hidden {
  display: none;
}

.emotion-24 .slick-slider {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-24 .slick-dots {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  position: absolute;
  left: 50%;
  -webkit-transform: translate(-50%);
  -ms-transform: translate(-50%);
  transform: translate(-50%);
  bottom: -32px;
}

.emotion-24 .slick-dots li {
  border-radius: 50%;
  height: 0.25rem;
  width: 0.25rem;
  margin-right: 0.25rem;
  opacity: 0.25;
}

.emotion-24 .slick-dots li:first-of-type {
  margin-left: 0.25rem;
}

.emotion-24 .slick-dots li button {
  display: none;
}

.emotion-24 .slick-dots li.slick-active {
  opacity: 1;
}

.emotion-24 .slick-dots li {
  background-color: #332E54;
}

.emotion-7 {
  position: absolute;
  top: 50%;
  z-index: 2000;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  display: block;
  left: 0.5rem;
  display: none;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: block;
  margin: 0;
  min-height: 52px;
  opacity: 1;
  padding: 0 1.5rem;
  position: relative;
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #EDEDF0;
  border-color: #EDEDF0;
  color: #C3C0CD;
  cursor: not-allowed;
  fill: #C3C0CD;
  min-width: 208px;
  max-width: 325px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 50%;
  max-width: unset;
  min-height: unset;
  min-width: unset;
  height: 48px;
  width: 48px;
  padding: 0;
}

.emotion-3:hover {
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
}

.emotion-3:active,
.emotion-3:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-3:visited,
.emotion-3:hover {
  opacity: 1;
  color: #C3C0CD;
}

.emotion-3 > svg {
  opacity: 1;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
  margin: 0 auto;
}

.emotion-0 {
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: color 350ms,-webkit-transform 350ms;
  -webkit-transition: color 350ms,transform 350ms;
  transition: color 350ms,transform 350ms;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  margin-top: -6px;
  width: 38px;
  opacity: 0;
  width: 36px;
  margin: -3px -3px 0 0;
}

.emotion-1 span {
  border-radius: 50%;
  display: inline-block;
  height: 4px;
  width: 4px;
  position: absolute;
}

.emotion-1 span:nth-of-type(1) {
  -webkit-animation: animation-0 1750ms infinite linear;
  animation: animation-0 1750ms infinite linear;
}

.emotion-1 span:nth-of-type(2) {
  -webkit-animation: animation-0 1750ms infinite linear -300ms;
  animation: animation-0 1750ms infinite linear -300ms;
}

.emotion-1 span:nth-of-type(3) {
  -webkit-animation: animation-0 1750ms infinite linear -600ms;
  animation: animation-0 1750ms infinite linear -600ms;
}

.emotion-1 span {
  background-color: #FFFFFF;
}

.emotion-9 {
  width: 311px !important;
  min-height: 48px;
  margin: 0 0.5rem;
}

.emotion-22 {
  position: absolute;
  top: 50%;
  z-index: 2000;
  -webkit-transform: translate(0%,-50%);
  -ms-transform: translate(0%,-50%);
  transform: translate(0%,-50%);
  display: block;
  right: 0.5rem;
}

.emotion-18 {
  color: #524D6E;
  font-size: 0.75rem;
  line-height: 1.67;
  font-weight: bold;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
  display: block;
  margin: 0;
  min-height: 52px;
  opacity: 1;
  padding: 0 1.5rem;
  position: relative;
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
  border-width: 1px;
  border-color: #EDEDF0;
  background-color: #FFFFFF;
  color: #332E54;
  fill: #332E54;
  box-shadow: 0px 8px 24px rgba(52,51,82,0.05);
  min-width: 208px;
  max-width: 325px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  border-radius: 50%;
  max-width: unset;
  min-height: unset;
  min-width: unset;
  height: 48px;
  width: 48px;
  padding: 0;
}

.emotion-18:hover {
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
}

.emotion-18:active,
.emotion-18:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #FFFFFF,0px 0px 0px 4px #332E54;
}

.emotion-18:hover {
  box-shadow: 0px 8px 24px rgba(52,51,82,0.10);
}

.emotion-18:hover {
  -webkit-transition: all 350ms ease-in-out;
  transition: all 350ms ease-in-out;
  opacity: 1;
}

.emotion-18 > svg {
  opacity: 1;
  -webkit-transition: opacity 350ms;
  transition: opacity 350ms;
  margin: 0 auto;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  position: absolute;
  bottom: 0;
  right: 0;
  top: 0;
  margin-top: -6px;
  width: 38px;
  opacity: 0;
  width: 36px;
  margin: -3px -3px 0 0;
}

.emotion-16 span {
  background-color: #332E54;
  border-radius: 50%;
  display: inline-block;
  height: 4px;
  width: 4px;
  position: absolute;
}

.emotion-16 span:nth-of-type(1) {
  -webkit-animation: animation-0 1750ms infinite linear;
  animation: animation-0 1750ms infinite linear;
}

.emotion-16 span:nth-of-type(2) {
  -webkit-animation: animation-0 1750ms infinite linear -300ms;
  animation: animation-0 1750ms infinite linear -300ms;
}

.emotion-16 span:nth-of-type(3) {
  -webkit-animation: animation-0 1750ms infinite linear -600ms;
  animation: animation-0 1750ms infinite linear -600ms;
}

<div
  class="emotion-26 emotion-27"
>
  <div
    class="emotion-24 emotion-25"
  >
    <div
      class="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        class="emotion-7 emotion-8"
        disabled=""
      >
        <div
          class="emotion-5 emotion-6"
        >
          <button
            class="emotion-3 emotion-4"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-0"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 7.21H2.41L8.74.89 7.85 0 0 7.86l8.18 7.87.87-.9-6.63-6.37H16V7.21z"
                fill="currentColor"
              />
            </svg>
            <div
              class="emotion-1 emotion-2"
              disabled=""
            >
              <div>
                <span />
                <span />
                <span />
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        class="slick-list"
        style="padding: 0px 50px;"
      >
        <div
          class="slick-track"
          style="width: -300px; opacity: 1; transform: translate3d(-50px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-center slick-current"
            data-index="0"
            style="outline: none;"
            tabindex="-1"
          >
            <div>
              <div
                class="emotion-9 emotion-10"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                Card 1
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="1"
            style="outline: none;"
            tabindex="-1"
          >
            <div>
              <div
                class="emotion-9 emotion-10"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                Card 2
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="2"
            style="outline: none;"
            tabindex="-1"
          >
            <div>
              <div
                class="emotion-9 emotion-10"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                Card 3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-22 emotion-8"
      >
        <div
          class="emotion-5 emotion-6"
        >
          <button
            class="emotion-18 emotion-4"
            type="button"
          >
            <svg
              class="emotion-0"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M.01 7.41H13.6L7.27 1.09 8.15.2l7.86 7.86-8.19 7.87-.86-.9 6.62-6.37H.01V7.41z"
                fill="currentColor"
              />
            </svg>
            <div
              class="emotion-16 emotion-2"
            >
              <div>
                <span />
                <span />
                <span />
              </div>
            </div>
          </button>
        </div>
      </div>
      <ul
        class="slick-dots"
        style="display: block;"
      >
        <li
          class="slick-active"
        >
          <button>
            1
          </button>
        </li>
        <li
          class=""
        >
          <button>
            2
          </button>
        </li>
        <li
          class=""
        >
          <button>
            3
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
